--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,6 +3,8 @@
     --colorButtonBackground: lightgrey;
     --colorButtonHover: grey;
     --colorError: red;
+
+    --maxImgWidth: 580px;
 }
 
 nav > ul {
@@ -11,6 +13,34 @@ nav > ul {
         display: inline-block;
         margin-right: 1rem;
         list-style-type: none;
+    }
+}
+
+#home {
+    img {
+        width: 100%;
+    }
+    @media (min-width: 500px) {
+        display: grid;
+        grid-template-areas:
+            "message picture"
+            "topics picture";
+        grid-template-rows: auto 1fr;
+        column-gap: 1rem;
+        p {
+            margin-top: 0;
+            grid-area: message;             
+        }
+        section { 
+            grid-area: topics;
+            h2 {
+                margin-top: 0;
+            }
+        }
+        img {
+            max-width: var(--maxImgWidth);
+            grid-area: picture;
+        }
     }
 }
 
@@ -55,9 +85,13 @@ article.card {
     form {   grid-area: button; }
 }
 
+button {
+    padding: 0.5rem 1rem;
+}
 .button {
     border-radius: 6px;
     padding: 0.5rem 1rem;
+    font-size: 0.95rem;
     color: var(--colorDefault);
     background-color: var(--colorButtonBackground);
 
